--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hanacai.checkmate">
+    package="com.teamred.checkmate">
 
     <application
         android:allowBackup="true"
@@ -10,11 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Checkmate">
         <activity
-            android:name="com.hanacai.checkmate.ui.login.LoginActivity"
+            android:name="com.teamred.checkmate.ui.login.LoginActivity"
             android:exported="true"
             android:label="@string/title_activity_login" />
         <activity
-            android:name="com.hanacai.checkmate.MainActivity"
+            android:name="com.teamred.checkmate.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Checkmate.NoActionBar">
