--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.teamred.checkmate">
+    package="com.teamred.checkmate" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,16 +10,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Checkmate">
+        android:theme="@style/Theme.Checkmate" >
         <activity
-            android:name="com.teamred.checkmate.ui.login.LoginActivity"
+            android:name=".MainActivity2"
+            android:exported="true"
+            android:label="@string/title_activity_main2" />
+        <activity
+            android:name=".ui.login.LoginActivity"
             android:exported="true"
             android:label="@string/title_activity_login" />
         <activity
-            android:name="com.teamred.checkmate.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Checkmate.NoActionBar">
+            android:theme="@style/Theme.Checkmate.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
