--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId 'com.hanacai.checkmate'
+        applicationId 'com.teamred.checkmate'
         minSdk 21
         targetSdk 31
         versionCode 1
@@ -43,13 +43,14 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'com.algolia:algoliasearch-android:3.+'
-    implementation 'com.algolia:instantsearch-android:2.11.1'
+//    implementation 'com.algolia:instantsearch-android:2.11.1'
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.google.firebase:firebase-analytics'
     // Declare the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.evernote:android-sdk:2.0.0-RC4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
