--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 12 08:04:39 CST 2021
-sdk.dir=/home/takunya/Android/Sdk
+#Sat Nov 13 11:58:23 EST 2021
+sdk.dir=/Users/takunyalin/Library/Android/sdk
