--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 18 20:52:25 EST 2021
-sdk.dir=C\:\\Users\\Christopher\\AppData\\Local\\Android\\Sdk
+#Sun Nov 21 23:31:04 EST 2021
+sdk.dir=/Users/takunyalin/Library/Android/sdk
