add create group and search group(no filter)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Checkmate">
         <activity
-            android:name=".AddPostActivity"
+            android:name=".ui.group.CreateGroupActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity2"
