--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // calender heat map lib
+    implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
 }
