--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,5 +48,17 @@
             android:theme="@style/Theme.Checkmate.NoActionBar"
             android:label="@string/title_calendar_login" />
     </application>
+    <!--Intent filter to capture System Browser or Authenticator calling back to our app after sign-in-->
+    <activity
+        android:name="com.microsoft.identity.client.BrowserTabActivity">
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="msauth"
+                android:host="com.teamred.checkmate"
+                android:path="/M61nf+aC69kCXmFY1ejcX83rDNc=" />
+        </intent-filter>
+    </activity>
 
 </manifest>
