--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,10 @@
             android:exported="true"
             android:theme="@style/Theme.Checkmate.NoActionBar"
             android:label="@string/title_calendar_login" />
+        <activity
+            android:name=".ui.login.AfterRegisterActivity"
+            android:exported="true"
+            android:label="@string/title_activity_after_register" />
     </application>
 
 </manifest>
