--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,5 +73,5 @@ dependencies {
     // calender heat map lib
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
     // notification
-    implementation "androidx.core:core:$core_version"
+    implementation "androidx.core:core:1.5.0"
 }
