--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,28 +10,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Checkmate">
+        android:theme="@style/Theme.Checkmate.NoActionBar">
         <activity
             android:name=".OnboardingActivity"
             android:exported="true">
+        </activity>
+        <activity
+            android:name=".ui.group.CreateGroupActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".ui.group.CreateGroupActivity"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity2"
-            android:exported="true"
-            android:label="@string/title_activity_main2">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".ui.login.LoginActivity"
@@ -42,23 +38,28 @@
             android:exported="true"
             android:theme="@style/Theme.Checkmate.NoActionBar"
             android:label="@string/title_calendar_login" />
+<!--        <activity-->
+<!--            android:name=".ui.notifications.NotificationsFragment"-->
+<!--            android:exported="true"-->
+<!--            android:theme="@style/Theme.Checkmate.NoActionBar"-->
+<!--            android:label="@string/title_calendar_login" />-->
         <activity
-            android:name=".ui.notifications.NotificationsFragment"
+            android:name=".ui.notes.CreateNote"
             android:exported="true"
-            android:theme="@style/Theme.Checkmate.NoActionBar"
-            android:label="@string/title_calendar_login" />
+            android:label="@string/title_activity_createnote">
+        </activity>
+        <!--Intent filter to capture System Browser or Authenticator calling back to our app after sign-in-->
+        <activity
+            android:name="com.microsoft.identity.client.BrowserTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="msauth"
+                    android:host="com.teamred.checkmate"
+                    android:path="/M61nf+aC69kCXmFY1ejcX83rDNc=" />
+            </intent-filter>
+        </activity>
     </application>
-    <!--Intent filter to capture System Browser or Authenticator calling back to our app after sign-in-->
-    <activity
-        android:name="com.microsoft.identity.client.BrowserTabActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.VIEW" />
-            <category android:name="android.intent.category.DEFAULT" />
-            <category android:name="android.intent.category.BROWSABLE" />
-            <data android:scheme="msauth"
-                android:host="com.teamred.checkmate"
-                android:path="/M61nf+aC69kCXmFY1ejcX83rDNc=" />
-        </intent-filter>
-    </activity>
-
 </manifest>
