--- a/app/src/main/res/raw/auth_config_single_account.json
+++ b/app/src/main/res/raw/auth_config_single_account.json
@@ -1,15 +1,15 @@
 {
-  "client_id" : "0984a7b6-bc13-4141-8b0d-8f767e136bb7",
+  "client_id" : "479b0e3c-b031-4527-b1b1-bf0048363262",
   "authorization_user_agent" : "DEFAULT",
-  "redirect_uri" : "msauth://com.azuresamples.msalandroidapp/1wIqXSqBj7w%2Bh11ZifsnqwgyKrY%3D",
-  "broker_redirect_uri_registered" : true,
+  "redirect_uri" : "msauth://com.teamred.checkmate/LCkbsYnopCRV1xaxrWgKm1OU4Qg%3D",
   "account_mode" : "SINGLE",
+  "broker_redirect_uri_registered": true,
   "authorities" : [
     {
       "type": "AAD",
       "audience": {
-        "type": "AzureADandPersonalMicrosoftAccount",
-        "tenant_id": "common"
+        "type": "PersonalMicrosoftAccount",
+        "tenant_id": "consumers"
       }
     }
   ]
