Apply working listview to my groups page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/Theme.Checkmate">
         <activity
             android:name=".MyGroupsActivity"
+            android:label="My groups"
             android:exported="false" />
         <activity
             android:name=".OnboardingActivity"
