--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,8 @@ dependencies {
     implementation 'com.microsoft.identity.client:msal:2.+'
     // notification
     implementation "androidx.core:core:1.5.0"
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
 
 
