--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,11 @@
         <activity
             android:name=".OnboardingActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".ui.group.CreateGroupActivity"
@@ -34,6 +34,11 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/title_activity_main">
+                        <intent-filter>
+                            <action android:name="android.intent.action.MAIN" />
+
+                            <category android:name="android.intent.category.LAUNCHER" />
+                        </intent-filter>
         </activity>
         <activity
             android:name=".ui.login.LoginActivity"
@@ -44,11 +49,11 @@
             android:exported="true"
             android:label="@string/title_calendar_login"
             android:theme="@style/Theme.Checkmate.NoActionBar" />
-        <activity
-            android:name=".ui.notifications.NotificationsFragment"
-            android:exported="true"
-            android:label="@string/title_calendar_login"
-            android:theme="@style/Theme.Checkmate.NoActionBar" />
+<!--        <activity-->
+<!--            android:name=".ui.notifications.NotificationsFragment"-->
+<!--            android:exported="true"-->
+<!--            android:label="@string/title_calendar_login"-->
+<!--            android:theme="@style/Theme.Checkmate.NoActionBar" />-->
         <activity
             android:name=".ui.login.AfterRegisterActivity"
             android:exported="true"
