--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ allprojects {
 android {
     signingConfigs {
         debug {
-            storeFile file('/Users/takunyalin/debug.keystore')
+            storeFile file(var)
         }
     }
     compileSdk 31
